--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.6.0
   http: ^1.2.2
   font_awesome_flutter: ^10.8.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
