--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.2
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.1.2
+  firebase_storage: ^12.3.6
+  firebase_core: ^3.8.0
 
 dev_dependencies:
   flutter_test:
