--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.6
   firebase_core: ^3.8.0
+  provider: ^6.1.2
+  firebase_auth: ^5.3.3
 
 dev_dependencies:
   flutter_test:
