--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
   flutter_facebook_auth: ^7.1.1
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
