--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   crypto: ^3.0.3
   cloudinary: ^1.2.0
   flutter_dotenv: ^5.1.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
