--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloudinary: ^1.2.0
   flutter_dotenv: ^5.1.0
   hive_flutter: ^1.1.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
