--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   hive_flutter: ^1.1.0
   lottie: ^3.1.3
+  awesome_notifications: ^0.10.0
 
 dev_dependencies:
   flutter_test:
