--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   hive_flutter: ^1.1.0
   lottie: ^3.1.3
   awesome_notifications: ^0.10.0
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
